@@ -9,10 +9,11 @@ to polish RDoc for Ruby 1.9.1.
 * Z Bug Fixes
   * Explicitly set the html template's text color, so that the generated
     documentation will display correctly on browsers with custom text and
-    background color settings (thanks to Luther Thompson).
+    background color settings (patch by Luther Thompson).
   * Ensure that RDoc correctly will associate an alias and a method, even
     if it encounters the alias first because the alias lives in a different
     file.
+  * Fix the parsing of multiline constants (patch by Chris Alfeld and Joel VanderWerf)
 
 === 2.2.0 / 2008-09-19
 This version includes some significant enhancements to ri.  See RI.txt for
